--- a/index.html
+++ b/index.html
@@ -13,15 +13,35 @@
     <meta property="og:title" content="Help Dude — AI for Support Engineers" />
     <meta property="og:description" content="AI-powered tools that unify search across Confluence, Jira, Freshdesk, and more." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/8a9c0dca-e50e-459a-afc4-1e08634ad78b.png" />
+    <meta property="og:image" content="/lovable-uploads/8a9c0dca-e50e-af4-1e08634ad78b.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/lovable-uploads/8a9c0dca-e50e-459a-afc4-1e08634ad78b.png" />
+    <meta name="twitter:image" content="/lovable-uploads/8a9c0dca-e50e-459a-af4-1e08634ad78b.png" />
   </head>
 
   <body>
     <div id="root"></div>
+    <script>
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      // This script takes the current url and converts the path and query
+      // string into just a query string, and then redirects the browser
+      // to the new url with only a query string and hash fragment.
+      var pathSegmentsToKeep = 1;
+
+      var l = window.location;
+      if (l.pathname.split('/').length > 1 + pathSegmentsToKeep) {
+        l.replace(
+          l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+          l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+          l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+          (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+          l.hash
+        );
+      }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
