--- a/public/404.html
+++ b/public/404.html
@@ -4,25 +4,19 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <script>
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script takes the current url and converts the path and query
-      // string into just a query string, and then redirects the browser
-      // to the new url with only a query string and hash fragment.
-      var pathSegmentsToKeep = 1;
-
-      var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      // Simple redirect to main page for GitHub Pages
+      // This prevents the complex query string issues
+      var currentPath = window.location.pathname;
+      var basePath = '/website/';
+      
+      // If we're not already at the base path, redirect there
+      if (currentPath !== basePath && currentPath !== '/website') {
+        window.location.replace(basePath);
+      }
     </script>
   </head>
   <body>
-    Redirecting...
+    <p>Redirecting to main page...</p>
+    <p>If you are not redirected automatically, <a href="/website/">click here</a>.</p>
   </body>
 </html>
