Fix image paths: change absolute paths to relative paths for GitHub Pages compatibility

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="Help Dude — AI for Support Engineers" />
     <meta property="og:description" content="AI-powered tools that unify search across Confluence, Jira, Freshdesk, and more." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/8a9c0dca-e50e-af4-1e08634ad78b.png" />
+    <meta property="og:image" content="./lovable-uploads/8a9c0dca-e50e-af4-1e08634ad78b.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/lovable-uploads/8a9c0dca-e50e-459a-af4-1e08634ad78b.png" />
+    <meta name="twitter:image" content="./lovable-uploads/8a9c0dca-e50e-459a-af4-1e08634ad78b.png" />
   </head>
 
   <body>
