--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@600;700;800&display=swap" rel="stylesheet">
-    <title>Help Dude — AI for Support Engineers</title>
+    <title>SupportIcon — AI for Support Engineers</title>
     <meta name="description" content="AI-powered tools for support engineers. Help Dude unifies search across Confluence, Jira, Freshdesk, and more." />
     <meta name="author" content="Help Dude" />
 
-    <meta property="og:title" content="Help Dude — AI for Support Engineers" />
+    <meta property="og:title" content="SupportIcon — AI for Support Engineers" />
     <meta property="og:description" content="AI-powered tools that unify search across Confluence, Jira, Freshdesk, and more." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./lovable-uploads/8a9c0dca-e50e-af4-1e08634ad78b.png" />
