--- a/public/404.html
+++ b/public/404.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Page Not Found</title>
-    <meta http-equiv="refresh" content="0;url=/website/">
+    <meta http-equiv="refresh" content="0;url=/">
   </head>
   <body>
     <p>Redirecting to main page...</p>
-    <p>If you are not redirected automatically, <a href="/website/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
   </body>
 </html>
