--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="/supporticon-uploads/8a9c0dca-e50e-459a-af4-1e08634ad78b.png" />
     
+    <!-- Instantly AI Tracking -->
+    <script id="vtag-ai-js" async src="https://r2.leadsy.ai/tag.js" data-pid="qqzNfbthUwHyUENK" data-version="062024"></script>
+    
     <!-- Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
